[workspace]
members = ["src/api", "src/bench", "src/bin", "src/types", "src/rumqttc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
rumqttc = { path = "src/rumqttc", features = ["websocket"] }
api = { path = "src/api" }
types = { path = "src/types" }
bench = { path = "src/bench" }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
anyhow = "1.0.94"