[workspace]
members = [
    "src/api",
    "src/bench",
    "src/bin",
    "src/types",
    "src/rumqttc",
    "src/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
rumqttc = { path = "src/rumqttc", features = ["websocket"] }
api = { path = "src/api" }
types = { path = "src/types" }
bench = { path = "src/bench" }
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tracing = "0.1.41"
anyhow = "1.0.94"
console-subscriber = "0.4.1"
clap = { version = "4.5.23", features = ["derive"] }
