[workspace]
members = [
    "src/api",
    "src/bench",
    "src/bin",
    "src/types",
    "src/rumqttc",
    "src/cli",
    "src/mqtt", "src/xs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
rumqttc = { path = "src/rumqttc", features = ["websocket"] }
mqtt = { path = "src/mqtt" }
api = { path = "src/api" }
types = { path = "src/types" }
bench = { path = "src/bench" }
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tracing = "0.1.41"
anyhow = "1.0.94"
console-subscriber = "0.4.1"
clap = { version = "4.5.23", features = ["derive"] }
bytes = "1.9.0"
tokio-util = { version = "0.7.13", features = ["codec"] }
thiserror = "2.0.10"
serde = { version = "1.0.217", features = ["derive"] }
bitflags = "2.6.0"
bytestring = "1.4.0"
http = "1.2.0"
futures-util = "0.3.31"

[profile.release]
opt-level = "z"   # 最小化大小
lto = true        # 链接时优化
codegen-units = 1 # 单一代码生成单元，优化效果更好
panic = "abort"   # 减少 panic 信息的开销
strip = true
