[package]
name = "mqtt"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bitflags = { workspace = true }
bytestring = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.1"
async-tungstenite = "0.28.2"
rustls-native-certs = "0.8.1"
webpki = "0.22.4"
flume = { version = "0.11.1", features = ["async"] }
ws_stream_tungstenite = "0.14.0"
fixedbitset = "0.5.7"
futures-util = { workspace = true }
