[package]
name = "xs"
version.workspace = true
edition.workspace = true

[dependencies]
api = { workspace = true }
bench = { workspace = true }
types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
console-subscriber = { workspace = true }
clap = { workspace = true }
csv = "1.3.1"
